--- a/src/components/menuposts/menuposts.module.css
+++ b/src/components/menuposts/menuposts.module.css
@@ -1,26 +1,9 @@
-.container {
-    flex: 2;
-    margin-top: 60px;
-
-}
-
-.subtitle {
-    color: gray;
-    font-size: 16px;
-    font-weight: 400;
-}
-
-.title {
-    font-size: 28px;
-}
-
 .items {
     margin-top: 35px;
-    margin-bottom: 35px;
+    margin-bottom: 60px;
     display: flex;
     flex-direction: column;
     gap: 35px;
-
 }
 
 .item {
@@ -31,13 +14,14 @@
 
 .imageContainer {
     flex: 1;
-    position: relative;
     aspect-ratio: 1/1;
+    position: relative;
 }
 
 .image {
     border-radius: 50%;
     border: 3px solid lightgray;
+    object-fit: cover;
 }
 
 .textContainer {
@@ -56,15 +40,27 @@
 }
 
 .category.travel {
-    background: rgb(235, 166, 225);;
+    background-color: #ff7857;
 }
 
-.category.food {
-    background-color: rgb(176, 238, 208);
+.culture {
+    background-color: #ffb14f;
 }
 
-.category.fashion {
-    background-color: rgb(228, 221, 123);
+.food {
+    background-color: #7fb881;
+}
+
+.fashion {
+    background-color: #ff7887;
+}
+
+.coding {
+    background-color: #775aec;
+}
+
+.style {
+    background-color: #789cff;
 }
 
 .postTitle {
