--- a/src/components/menu/menu.module.css
+++ b/src/components/menu/menu.module.css
@@ -1,7 +1,6 @@
 .container {
     flex: 2;
     margin-top: 60px;
-
 }
 
 .subtitle {
@@ -14,69 +13,8 @@
     font-size: 28px;
 }
 
-.items {
-    margin-top: 35px;
-    margin-bottom: 35px;
-    display: flex;
-    flex-direction: column;
-    gap: 35px;
-
-}
-
-.item {
-    display: flex;
-    align-items: center;
-    gap: 20px;
-}
-
-.imageContainer {
-    flex: 1;
-    position: relative;
-    aspect-ratio: 1/1;
-}
-
-.image {
-    border-radius: 50%;
-    border: 3px solid lightgray;
-}
-
-.textContainer {
-    flex: 4;
-    display: flex;
-    flex-direction: column;
-    gap: 5px;
-}
-
-.category {
-    padding: 3px 8px;
-    border-radius: 10px;
-    font-size: 12px;
-    color: white;
-    width: max-content;
-}
-
-.category.travel {
-    background: rgb(235, 166, 225);;
-}
-
-.category.food {
-    background-color: rgb(176, 238, 208);
-}
-
-.category.fashion {
-    background-color: rgb(228, 221, 123);
-}
-
-.postTitle {
-    font-size: 18px;
-    font-weight: 500;
-    color: var(--softTextColor);
-}
-
-.detail {
-    font-size: 12px;
-}
-
-.date {
-    color: gray;
+@media screen and (max-width: 1024px) {
+    .container {
+        display: none;
+    }
 }
