--- a/src/app/global.css
+++ b/src/app/global.css
@@ -66,3 +66,11 @@ a {
     max-width: 475px;
   }
 }
+
+.ql-container {
+  font-size: 28px !important;
+}
+
+.quill > .ql-container > .ql-editor.ql-blank::before {
+  color: #B3B3B1;
+}
